added table for metropolitan

--- a/index.html
+++ b/index.html
@@ -5,17 +5,67 @@ This project will also help people to view results of local election 2079 of all
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Local Election 2079 Results</title>
-	<style type="text/css">
-		body {
-			background-color: #d96638;
-			font-family: Verdana, Arial;
-			color: white;
-		}
-	</style>
+	<title>Election result</title>
+	<link rel="stylesheet" type="text/css" href="styles\css_file.css">
 </head>
 <body>
 	<!-- Local Election banner here -->
+	<h1 id="head">Local Election 2079 Results</h1>
+	<div id="metropolitan">
+			<h3 id="metroTitle">Metropolitans Winners</h3>
+			<table id="metro">
+				<tr>
+					<th>Metropolitan</th>
+					<th>Photo</th>
+					<th>Winner</th>
+					<th>Total Votes</th>
+					<th>Party</th>
+				</tr>
+				<tr>
+					<td><a href="#">Kathmandu</a></td>
+					<td><img src="" width="100px"></td>
+					<td><a href="https://en.wikipedia.org/wiki/Balen_Shah">Balen Shah</a></td>
+					<td>61,767</td>
+					<td>Swotantra</td>
+				</tr>
+				<tr>
+					<td><a href="#">Lalitpur</a></td>
+					<td><img src="" width="100px"></td>
+					<td><a href="https://en.wikipedia.org/wiki/Chiri_Babu_Maharjan">Chiri Babu Maharjan</a></td>
+					<td>42,722</td>
+					<td>Nepali Congress</td>
+				</tr>
+				<tr>
+					<td><a href="#">Pokhara</a></td>
+					<td><img src="" width="100px"></td>
+					<td><a href="#">Dhana Raj Acharya</a></td>
+					<td>58,893</td>
+					<td>Ekikrit Samajbadi</td>
+				</tr>
+				<tr>
+					<td><a href="#">Bharatpur</a></td>
+					<td><img src="" width="100px"></td>
+					<td><a href="">Renu Dahal</a></td>
+					<td>52,030</td>
+					<td>Maobadi</td>
+				</tr>
+				<tr>
+					<td><a href="#">Biratnagar</a></td>
+					<td><img src="" width="100px"></td>
+					<td><a href="">Nagesh Koirala</a></td>
+					<td>30,170</td>
+					<td>Nepali Congress</td>
+				</tr>
+				<tr>
+					<td><a href="#">Birgunj</a></td>
+					<td><img src="" width="100px"></td>
+					<td><a href="">Rajesh Man Singh</a></td>
+					<td>46,215</td>
+					<td>Janata Samajwadi Party</td>
+				</tr>
+			</table>
+		</fieldset>
+	</div>
 
 </body>
 </html>
